--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,23 +1,23 @@
 a {
-	@apply text-green-300;
+	@apply text-primary;
 }
 
 h1 {
-	@apply text-green-600 font-bold capitalize text-3xl;
+	@apply text-primary font-bold capitalize text-3xl;
 }
 
 h2 {
-	@apply text-green-600 font-bold capitalize text-xl;
+	@apply text-primary font-bold capitalize text-xl;
 }
 
 h3 {
-	@apply text-green-600 font-bold capitalize text-base;
+	@apply text-primary font-bold capitalize text-base;
 }
 
 :focus {
-	@apply outline-solid-cyan-300/50;
+	@apply outline-solid-primary/50;
 }
 
 code {
-	@apply font-mono text-green-200;
+	@apply font-mono text-secondary;
 }
