feat(index): new front page
Co-authored-by: Tiia Aurora <tiialikespink@gmail.com>

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,9 +1,12 @@
 a {
 	@apply text-primary;
 }
+a:hover {
+	@apply text-primary-focus;
+}
 
 h1 {
-	@apply text-primary font-bold capitalize text-3xl;
+	@apply text-primary font-bold text-3xl;
 }
 
 h2 {
